<resources>
    <string name="app_name">My Expense Manager</string>

    <string name="add_button">Add</string>
    <string name="search_button">Search</string>
    <string name="delete_button">Delete</string>
    <string name="clear_button">Clear</string>
    <string name="calender_button">Calender</string>
    <string name="convert_button">Convert</string>
    <string name="base_button">Refactor</string>
    <string name="vr_button">VR</string>
    <string name="graph_button">Graphs</string>

    <string name="cost_edit_text">Cost</string>
    <string name="desc_edit_text">Description</string>
    <string name="date_edit_text">Date dd/mm/yyyy</string>
    <string name="new_currency_edit_text">New Currency</string>

    <string name="cost_range_text_view">Cost Range</string>
    <string name="start_range">Start</string>
    <string name="end_range">End</string>
    <string name="date">Date</string>
    <string name="delete_date">Data Will Get Deleted Till</string>
    <string name="add_expense">Add Expense</string>
    <string name="welcome">WELCOME</string>

    <string name="before">Before</string>
    <string name="after">After</string>
    <integer name="date_picker_id">999</integer>
    <string name="empty_list">No Results!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">com.example.android.myexpensemanager.PREFERENCE_FILE_KEY</string>
    <string name="preference_currency">com.example.android.myexpensemanager.PREFERENCE_CURRENCY</string>
</resources>
