<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/mxm_speech_recognizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/vr_button"
        android:src="@drawable/microphone_96" />

    <ImageButton
        android:id="@+id/mxm_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/graph_button"
        android:src="@drawable/chart_96"/>

    <ImageButton
        android:id="@+id/mxm_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/add_96" />

    <ImageButton
        android:id="@+id/mxm_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/search_button"
        android:src="@drawable/search_96" />

    <ImageButton
        android:id="@+id/mxm_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/remove_96" />
</LinearLayout>