<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_edit_text"
        android:id="@+id/mxm_cost"
        android:inputType="numberDecimal"
        android:maxLength="20"
        android:padding="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_edit_text"
        android:id="@+id/mxm_desc"
        android:inputType="text"
        android:maxLength="100"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/date_edit_text"
            android:id="@+id/mxm_date"
            android:layout_weight="4"
            android:maxLength="10"
            android:inputType="date"
            android:padding="16dp"/>
        <ImageButton
            android:id="@+id/mxm_calender"
            android:layout_width="wrap_content"
            android:contentDescription="@string/calender_button"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_calendar_today_black_18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_button"
            android:src="@drawable/baseline_add_black_18dp"
            android:layout_margin="8dp"
            android:id="@+id/mxm_addx"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/clear_button"
            android:textSize="16sp"
            android:src="@drawable/baseline_clear_black_18dp"
            android:layout_margin="8dp"
            android:id="@+id/mxm_clear"/>
    </LinearLayout>
</LinearLayout>
