<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".DeleteExpense">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/delete_date"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/date_edit_text"
        android:inputType="date"
        android:id="@+id/mxm_delete_date"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mxm_search_delete"
        android:text="@string/search_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mxm_delete_button"
        android:text="@string/delete_button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_edit_text"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:gravity="left"
            android:textSize="20sp"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_background"
        android:id="@+id/mxm_delete_list_view_expense">
    </ListView>

</LinearLayout>