<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    android:padding="8dp"
    tools:context=".QueryExpense">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        android:layout_weight="19"
        android:id="@+id/mxm_list_view_expense">
    </ListView>
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/baseline_expand_more_black_18dp"
        android:id="@+id/mxm_query_drag"
        android:layout_weight="1.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:id="@+id/mxm_start_end_lin"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:hint="@string/start_range"
            android:inputType="numberDecimal"
            android:id="@+id/mxm_start"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:hint="@string/end_range"
            android:inputType="numberDecimal"
            android:id="@+id/mxm_end"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:id="@+id/mxm_date_lin"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/date_edit_text"
            android:inputType="date"
            android:id="@+id/mxm_search_date"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/mxm_calender"
                android:layout_width="wrap_content"
                android:contentDescription="@string/calender_button"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_calendar_today_black_18dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before"
                android:id="@+id/mxm_date_before"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mxm_date_after"
                android:text="@string/after"/>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:id="@+id/mxm_query_button"
        android:src="@drawable/baseline_search_black_18dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/search_button"/>
</LinearLayout>