<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Settings">

    <ProgressBar
        android:id="@+id/mxm_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:indeterminateDuration="5000"
        android:progressTint="@color/colorAccent"
        android:secondaryProgressTint="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textSize="20sp"
        android:id="@+id/mxm_old_currency"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/new_currency_edit_text"
        android:id="@+id/mxm_new_currency"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mxm_currency_list">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/mxm_convert_currency"
            android:text="@string/convert_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/mxm_base_currency"
            android:text="@string/base_button"/>
    </LinearLayout>

</LinearLayout>